--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native-gesture-handler": "^1.3.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.4",
-    "react-navigation": "^3.11.1"
+    "react-navigation": "^3.11.1",
+    "react-navigation-drawer": "^2.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.1.1"
